// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectedEmail renders correctly 1`] = `
.c0 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

<span
  class=""
  role="button"
  tabindex="0"
>
  <a
    class="c0"
    href="#"
    rel="nofollow noopener noreferrer external"
  >
    Email
  </a>
</span>
`;

exports[`ProtectedEmail with custom title renders correctly 1`] = `
.c0 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

<span
  class=""
  role="button"
  tabindex="0"
>
  <a
    class="c0"
    href="#"
    rel="nofollow noopener noreferrer external"
  >
    title
  </a>
</span>
`;

exports[`ProtectedEmail without GPG key download option renders correctly 1`] = `
.c0 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

<span
  class=""
  role="button"
  tabindex="0"
>
  <a
    class="c0"
    href="#"
    rel="nofollow noopener noreferrer external"
  >
    Email
  </a>
</span>
`;
